--- a/layouts/default.html
+++ b/layouts/default.html
@@ -7,25 +7,28 @@
 		<meta name="generator" content="Nanoc <%= Nanoc::VERSION %>">
 
 		<title>A Brand New Nanoc Site - <%= @item[:title] %></title>
+		<link rel="stylesheet" type="text/css" href="/styles/styles.css" />
 		<link rel="stylesheet" type="text/css" href="/styles/main.css" />
 	</head>
 	<body>
-		<div id="main">
-			<%= yield %>
-		</div>
-		<div id="sidebar">
-			<h2>Documentation</h2>
-			<ul>
-				<li><a href="http://nanoc.ws/about/">About</a></li>
-				<li><a href="http://nanoc.ws/doc/">Documentation</a></li>
-				<li><a href="http://nanoc.ws/doc/tutorial/">Tutorial</a></li>
-			</ul>
-			<h2>Community</h2>
-			<ul>
-				<li><a href="http://groups.google.com/group/nanoc/">Discussion group</a></li>
-				<li><a href="irc://chat.freenode.net/#nanoc">IRC channel</a></li>
-				<li><a href="http://nanoc.ws/contributing/">Contributing</a></li>
-			</ul>
-		</div>
+		<div class="container">
+			<main id="main">
+				<%= yield %>
+			</main>
+			<aside id="sidebar">
+				<h2>Documentation</h2>
+				<ul>
+					<li><a href="http://nanoc.ws/about/">About</a></li>
+					<li><a href="http://nanoc.ws/doc/">Documentation</a></li>
+					<li><a href="http://nanoc.ws/doc/tutorial/">Tutorial</a></li>
+				</ul>
+				<h2>Community</h2>
+				<ul>
+					<li><a href="http://groups.google.com/group/nanoc/">Discussion group</a></li>
+					<li><a href="irc://chat.freenode.net/#nanoc">IRC channel</a></li>
+					<li><a href="http://nanoc.ws/contributing/">Contributing</a></li>
+				</ul>
+			</nav>
+		</aside>
 	</body>
 </html>
