--- a/layouts/default.html
+++ b/layouts/default.html
@@ -1,73 +1,42 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
+	<head lang="es">
 		<meta charset="UTF-8">
-
+		<meta name="description" content="Centro de ayuda de AVEM">
+		<meta name="keywords" content="avem,uv,ayuda,help,support">
 		<!-- you don't need to keep this, but it's cool for stats! -->
 		<meta name="generator" content="Nanoc <%= Nanoc::VERSION %>">
 
-		<title>AVEM &gt; Help</title>
+		<title>Centro de Ayuda de AVEM</title>
 
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/css/tether.min.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.1.1/css/mdb.min.css">
+		<link rel="stylesheet" href="styles/default.css">
 	</head>
+
 	<body>
 		<header>
-			<nav class="navbar navbar-dark bg-primary">
-				<button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#collapseEx2">
-					<i class="fa fa-bars"></i>
-				</button>
-
-				<div class="container">
-					<div class="collapse navbar-toggleable-xs" id="collapseEx2">
-						<a class="navbar-brand" href="#">AVEM</a>
-						<ul class="nav navbar-nav">
-							<li class="nav-item">
-								<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#">Features</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#">Pricing</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#">About</a>
-							</li>
-						</ul>
-					</div>
+			<div id="header-top">
+				<div id="header-logo"></div>
+				<div id="header-extra">
+					<a href="http://help.avem.es" id="help-btn"><span class="fa-stack fa-md">
+						<i class="fa fa-circle fa-stack-2x"></i>
+						<i class="fa fa-question fa-inverse fa-stack-1x"></i>
+					</span></a>
+					<a id="login-btn" href="http://avem.es/login">Inicia sesión</a>
 				</div>
-			</nav>
+			</div>
+
+			<nav id="header-navbar"><ul>
+				<li class="nav-item"><a class="nav-link" href="http://avem.es">Inicio</a></li>
+				<li class="nav-item"><a class="nav-link" href="http://avem.es/activities">Actividades</a></li>
+				<li class="nav-item"><a class="nav-link" href="http://avem.es/exchanges">Intercambios</a></li>
+				<li class="nav-item"><a class="nav-link" href="http://blog.avem.es">Blog</a></li>
+				<li class="nav-item"><a class="nav-link" href="http://avem.es/about">Quiénes somos</a></li>
+			</ul></nav>
 		</header>
 
-		<div class="container">
-			<div class="mt-2 mb-2">
-				<main class="col-md-9 push-md-3" id="main">
-					<%= yield %>
-				</main>
-
-				<aside class="col-md-3 pull-md-9" id="sidebar">
-					<h2>Documentation</h2>
-					<ul>
-						<li><a href="http://nanoc.ws/about/">About</a></li>
-						<li><a href="http://nanoc.ws/doc/">Documentation</a></li>
-						<li><a href="http://nanoc.ws/doc/tutorial/">Tutorial</a></li>
-					</ul>
-					<h2>Community</h2>
-					<ul>
-						<li><a href="http://groups.google.com/group/nanoc/">Discussion group</a></li>
-						<li><a href="irc://chat.freenode.net/#nanoc">IRC channel</a></li>
-						<li><a href="http://nanoc.ws/contributing/">Contributing</a></li>
-					</ul>
-				</aside>
-			</div>
-		</div>
-
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.1.1/js/mdb.min.js"></script>
+		<div id="search-area"><form action="search">
+			<input id="search-field" type="search" name="q" placeholder="Lo que quiere buscar...">
+			<input id="search-btn" type="submit" value="Buscar">
+		</form></div>
 	</body>
-</html>
+</div>
