Fix font-awesome font loading

--- a/content/styles/default.scss
+++ b/content/styles/default.scss
@@ -108,9 +108,8 @@ body {
 	width: 65%;
 	border: none;
 	height: 100%;
-	padding-left: 35px;
+	padding: 0 15px;
 	border-radius: 4px;
-	padding-right: 15px;
 	background-color: #ebebeb;
 	transition: background-color .15s ease-out;
 
