--- a/content/styles/default.scss
+++ b/content/styles/default.scss
@@ -1,34 +1,111 @@
 @import "base";
+@import "config";
+
+.page-wrapper {
+	margin: 0 auto;
+	max-width: $page-width;
+}
+
+.nav {
+	&__list {
+		display: flex;
+		justify-content: space-around;
+	}
+
+	&__item {
+		float: left;
+		height: 35px;
+		padding: 0 20px;
+		margin-left: 1px;
+		line-height: 35px;
+		white-space: nowrap;
+		list-style-type: none;
+	}
+
+	&__link {
+		display: block;
+		cursor: pointer;
+		text-decoration: none;
+		color: rgba(0, 0, 0, .8);
+		text-transform: uppercase;
+
+		&:hover {
+			border-bottom: 2px solid;
+		}
+	}
+}
+
+.btn {
+	padding: 0;
+	border: none;
+	cursor: pointer;
+	border-radius: 4px;
+	white-space: nowrap;
+	text-decoration: none;
+
+	&:hover {
+		box-shadow: 0 2px 4px rgba(0, 0, 0, .2);
+	}
+
+	&--default {
+		color: #fff;
+		background-color: $default-btn-color;
+
+		&:hover {
+			background-color: lighten($default-btn-color, 3%);
+		}
+	}
+
+	&--primary {
+		color: #fff;
+		background-color: $primary-btn-color;
+
+		&:hover {
+			border: 1px solid darken($primary-btn-color, 5%);
+			background-color: lighten($primary-btn-color, 3%);
+		}
+	}
+}
+
+.text-field {
+	border: none;
+	padding: 0 15px;
+	border-radius: 4px;
+	background-color: $text-field-bg;
+	transition: background-color .15s ease-out;
+
+	&:focus {
+		outline: none;
+		background-color: darken($text-field-bg, 3%);
+	}
+}
 
 body {
+	margin: 0;
+	padding: 0;
 	font-family: sans-serif;
 	background: radial-gradient(circle at 50% 0%, #fff, #f2f2f2) no-repeat;
 }
 
-#header-top {
-	margin-top: 45px;
-	margin-bottom: 35px;
+#header-logo {
+	margin: 0 auto;
+	background-size: cover;
+	background-image: url("../images/avem-logo.png");
 }
 
 #header-extra {
-	top: 100px;
-	right: 75px;
+	z-index: 1;
 	font-size: .8rem;
-	position: absolute;
 	border-radius: 3px;
 	white-space: nowrap;
 }
 
 #help-btn {
-	padding: 0;
-	border: none;
-	border-radius: 50%;
-	text-decoration: none;
 	vertical-align: middle;
 	color: rgba(0, 0, 0, .8);
-	background-color: #f2f2f2;
 
-	&:hover {
+	&:hover{
+		box-shadow: none;
 		color: rgba(0, 0, 0, .7);
 	}
 }
@@ -38,9 +115,7 @@ body {
 	margin-left: 10px;
 	padding: 10px 15px;
 	border-radius: 3px;
-	white-space: nowrap;
 	display: inline-block;
-	text-decoration: none;
 	vertical-align: middle;
 	text-transform: uppercase;
 	background-color: transparent;
@@ -52,85 +127,71 @@ body {
 	}
 }
 
-#header-logo {
-	width: 124px;
-	height: 124px;
-	margin: 0 auto;
-	background-size: cover;
-	background-image: url("../images/avem-logo.png");
-}
-
-#header-navbar {
-	width: 80%;
-	margin: 0 auto;
-
-	ul {
-		display: flex;
-		justify-content: space-around;
-	}
-
-	li {
-		float: left;
-		height: 35px;
-		padding: 0 20px;
-		margin-left: 1px;
-		line-height: 35px;
-		white-space: nowrap;
-		list-style-type: none;
-	}
-
-	.nav-link {
-		text-decoration: none;
-		box-sizing: border-box;
-		color: rgba(0, 0, 0, .8);
-		text-transform: uppercase;
-
-		&:hover {
-			border-bottom: 2px solid;
-		}
-	}
-}
-
 #search-area {
-	width: 60%;
-	height: 37px;
-	max-width: 650px;
-	margin: 35px auto;
+	padding: 0;
+	width: 95%;
+	height: 38px;
+	max-width: 550px;
 	text-align: center;
-	box-sizing: border-box;
-
-	form {
-		height: 100%;
-	}
+	white-space: nowrap;
 }
 
 #search-field {
-	width: 65%;
-	border: none;
+	width: 75%;
 	height: 100%;
-	padding: 0 15px;
-	border-radius: 4px;
-	background-color: #ebebeb;
-	transition: background-color .15s ease-out;
-
-	&:focus {
-		outline: none;
-		background-color: #e3e3e3;
-	}
 }
 
 #search-btn {
-	width: 30%;
-	color: #fff;
+	width: 25%;
 	height: 100%;
-	cursor: pointer;
-	margin-left: 10px;
-	border-radius: 4px;
-	background-color: #79a9ec;
-	border: 1px solid #639be9;
+}
 
-	&:hover {
-		background-color: #82afed;
-		box-shadow: 0 2px 4px rgba(0, 0, 0, .2);
+@media screen and (min-width: 768px) {
+	.page-wrapper {
+		padding-top: 45px;
+	}
+
+	#header-navbar {
+		margin: 35px auto;
+		max-width: 1000px;
+	}
+
+	#header-extra {
+		right: 10%;
+		position: absolute;
+		top: 45px + $logo-size / 2;
+		transform: translateY(-50%);
+	}
+
+	#header-logo {
+		width: $logo-size;
+		height: $logo-size;
+	}
+
+	#search-area {
+		margin: 35px auto;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.page-wrapper {
+		padding-top: 10px;
+	}
+
+	#header-logo {
+		width: $logo-size-sm;
+		height: $logo-size-sm;
+	}
+
+	#header-extra {
+		display: none;
+	}
+
+	#header-navbar {
+		display: none;
+	}
+
+	#search-area {
+		margin: 10px auto;
 	}
 }
