Add viewport meta tag for responsive views

--- a/content/styles/default.scss
+++ b/content/styles/default.scss
@@ -144,6 +144,7 @@ body {
 #search-btn {
 	width: 25%;
 	height: 100%;
+	margin-left: calc(15px - 1em);
 }
 
 @media screen and (min-width: 768px) {
