--- a/layouts/default.html
+++ b/layouts/default.html
@@ -2,6 +2,7 @@
 <html>
 	<head lang="es">
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width">
 		<meta name="description" content="Centro de ayuda de AVEM">
 		<meta name="keywords" content="avem,uv,ayuda,help,support">
 		<!-- you don't need to keep this, but it's cool for stats! -->
