Add OpenGraph metadata

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -3,13 +3,20 @@
 	<head lang="es">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width">
-		<meta name="description" content="Centro de ayuda de AVEM">
-		<meta name="keywords" content="avem,uv,ayuda,help,support">
+		<meta name="keywords" content="avem,uv,ayuda,socios,help,support">
+
+		<meta property="og:type" content="website">
+		<meta property="og:locale" content="es_ES">
+		<meta property="og:url" content="http://help.avem.es">
+		<meta property="og:title" content="Centro de ayuda de AVEM">
+		<meta property="og:image" content="http://help.avem.es/images/avem-logo.png">
+		<meta property="og:description" content="El centro de ayuda de la Asociación
+		                                         Valenciana de Estudiantes de Medicina.">
+
 		<!-- you don't need to keep this, but it's cool for stats! -->
-		<meta name="generator" content="Nanoc <%= Nanoc::VERSION %>">
+		<meta name="generator" content="Nanoc 4.3.7">
 
 		<title>Centro de Ayuda de AVEM</title>
-
 		<link rel="stylesheet" href="styles/default.css">
 	</head>
 
