Add text and display font variables

--- a/content/styles/_variables.scss
+++ b/content/styles/_variables.scss
@@ -2,6 +2,9 @@ $page-width: 2100px;
 $page-bg-from: #fff;
 $page-bg-to: #f2f2f2;
 
+$text-font: serif;
+$display-font: sans-serif;
+
 $logo-size: 124px;
 $logo-size-sm: 54px;
 
