--- a/layouts/default.html
+++ b/layouts/default.html
@@ -5,6 +5,11 @@
 		<meta name="keywords" content="avem,uv,ayuda,dudas,faq,help,support">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+		<title>Centro de Ayuda de AVEM</title>
+		<script src="scripts/index.js"></script>
+		<link rel="stylesheet" href="styles/default.css">
+
+		<!-- OpenGraph metadata -->
 		<meta property="og:type" content="website">
 		<meta property="og:locale" content="es_ES">
 		<meta property="og:url" content="http://help.avem.es">
@@ -16,9 +21,13 @@
 		<!-- you don't need to keep this, but it's cool for stats! -->
 		<meta name="generator" content="Nanoc <%= Nanoc::VERSION %>">
 
-		<title>Centro de Ayuda de AVEM</title>
-		<script src="scripts/index.js"></script>
-		<link rel="stylesheet" href="styles/default.css">
+		<!-- Google Analytics tracking -->
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+			ga('create', 'UA-86942802-1', 'auto');
+			ga('require', 'linkid');
+			ga('send', 'pageview');
+		</script>
 	</head>
 
 	<body>
