--- a/layouts/default.html
+++ b/layouts/default.html
@@ -31,7 +31,7 @@
 	</head>
 
 	<body>
-		<div class="page-wrapper">
+		<div id="page-wrapper" class="page-wrapper">
 			<div class="content-wrapper">
 				<header>
 					<button id="menu-toggle">
