--- a/content/styles/default.scss
+++ b/content/styles/default.scss
@@ -1,275 +1,14 @@
-@import 'vendor';
-@import 'variables';
-@import 'mixins';
+@import 'vendor/_font-awesome';
 
-body {
-	margin: 0;
-	overflow-x: hidden;
-	padding: 0;
-}
+@import 'base/color';
+@import 'base/reset';
+@import 'base/typography';
 
-.page-wrapper {
-	background: radial-gradient(circle at 50% 0%,
-	                            $page-bg-from,
-	                            $page-bg-to) no-repeat;
-	height: 100%;
-	position: relative;
-}
+@import 'layouts/content';
+@import 'layouts/header';
+@import 'layouts/navigation';
+@import 'layouts/search';
 
-.content-wrapper {
-	margin: 0 auto;
-	max-width: $page-width;
-}
-
-.nav {
-	font-family: $display-font;
-}
-
-.nav__item {
-	height: 25px;
-	line-height: 25px;
-	list-style-type: none;
-	white-space: nowrap;
-}
-
-.nav__link {
-	cursor: pointer;
-	display: block;
-	text-decoration: none;
-}
-
-.btn {
-	border: 0;
-	border-radius: 4px;
-	cursor: pointer;
-	font-family: $display-font;
-	padding: 0;
-	text-decoration: none;
-	white-space: nowrap;
-}
-
-.btn--primary {
-	background-color: $primary-btn-bg;
-	color: $primary-btn-color;
-
-	&:hover {
-		background-color: lighten($primary-btn-bg, 3%);
-		border: 1px solid darken($primary-btn-bg, 5%);
-		box-shadow: 0 2px 4px rgba(0, 0, 0, .2);
-	}
-}
-
-.btn--secondary {
-	background-color: $default-btn-bg;
-	color: $default-btn-color;
-
-	&:hover {
-		background-color: lighten($default-btn-bg, 3%);
-		border: 1px solid darken($default-btn-bg, 5%);
-		box-shadow: 0 2px 4px rgba(0, 0, 0, .2);
-	}
-}
-
-.btn--extra {
-	background-color: $extra-btn-bg;
-	border: 2px solid $extra-btn-color;
-	border-radius: 3px;
-	color: $extra-btn-color;
-	padding: 10px 15px;
-	text-transform: uppercase;
-
-	&:hover {
-		background-color: $extra-btn-color;
-		color: invert($extra-btn-color);
-	}
-}
-
-.btn--mono {
-	color: rgba(0, 0, 0, .8);
-
-	&:hover {
-		color: rgba(0, 0, 0, .6);
-	}
-}
-
-.text-field {
-	background-color: $text-field-bg;
-	border: 0;
-	border-radius: 4px;
-	font-family: $display-font;
-	outline: 0;
-	padding: 0 15px;
-	transition: background-color .2s ease-out;
-
-	&:focus {
-		background-color: darken($text-field-bg, 3%);
-	}
-}
-
-#header-logo {
-	background-image: url('../images/avem-logo.png');
-	background-size: cover;
-	margin: 0 auto;
-}
-
-#header-extra {
-	font-size: .9rem;
-	white-space: nowrap;
-
-	* {
-		display: inline-block;
-		vertical-align: middle;
-	}
-
-	> *:not(:first-child) {
-		margin-left: 10px;
-	}
-}
-
-#search-area {
-	display: flex;
-	height: 38px;
-	max-width: 550px;
-	padding: 0;
-	text-align: center;
-	white-space: nowrap;
-	width: 95%;
-}
-
-#search-field {
-	height: 100%;
-	width: 75%;
-}
-
-#search-btn {
-	height: 100%;
-	margin-left: 7px;
-	width: 25%;
-}
-
-@media screen and (min-width: 768px) {
-	.content-wrapper {
-		padding-top: 45px;
-	}
-
-	.nav--main {
-		.nav__list {
-			display: flex;
-			justify-content: space-around;
-		}
-
-		.nav__item {
-			float: left;
-			padding: 0 20px;
-			text-transform: uppercase;
-		}
-
-		.nav__link {
-			color: rgba(0, 0, 0, .8);
-
-			&:hover {
-				border-bottom: 2px solid;
-			}
-		}
-	}
-
-	#header-logo {
-		height: $logo-size;
-		width: $logo-size;
-	}
-
-	#header-extra {
-		position: absolute;
-		right: 10%;
-		top: 45px + $logo-size / 2;
-		transform: translateY(-50%);
-	}
-
-	#menu-toggle {
-		display: none;
-	}
-
-	#main-nav {
-		margin: 35px auto 25px;
-		max-width: $main-nav-max-width;
-	}
-
-	#search-area {
-		margin: 10px auto;
-	}
-}
-
-@media screen and (max-width: 768px) {
-	.page-wrapper {
-		transform: none;
-		transition: transform $side-menu-slide-duration;
-	}
-
-	.page-wrapper--hidden {
-		transform: translateX($side-menu-width-md);
-
-		&::before {
-			background-color: transparent;
-			content: '';
-			display: block;
-			height: 100vh;
-			position: absolute;
-			width: 100vw;
-		}
-	}
-
-	.content-wrapper {
-		padding-top: 10px;
-	}
-
-	.nav--main {
-		background-color: $side-menu-bg;
-		box-sizing: border-box;
-		height: 100vh;
-		min-width: $side-menu-width-md;
-		padding: 20px 0;
-		position: absolute;
-		right: 100%;
-		top: 0;
-		z-index: 1;
-	}
-
-	.nav__item {
-		padding: 0 30px;
-	}
-
-	.nav__link {
-		color: $side-menu-color;
-
-		&:hover {
-			color: lighten($side-menu-color, 33%);
-		}
-	}
-
-	#header-logo {
-		height: $logo-size-sm;
-		width: $logo-size-sm;
-	}
-
-	#header-extra {
-		display: none;
-	}
-
-	#menu-toggle {
-		background-color: transparent;
-		border: 0;
-		cursor: pointer;
-		font-size: 1.3rem;
-		left: 2%;
-		outline: 0;
-		padding: 10px;
-		position: absolute;
-		top: 10px + $logo-size-sm / 2;
-		transform: translateY(-50%);
-		z-index: 1;
-	}
-
-	#search-area {
-		margin: 10px auto;
-	}
-}
+@import 'modules/buttons';
+@import 'modules/navigation';
+@import 'modules/search';
