Tweak overlapping media queries

--- a/content/styles/layouts/_content.scss
+++ b/content/styles/layouts/_content.scss
@@ -3,4 +3,8 @@ $content-max-width: 50%;
 .l-content {
 	margin: 30px auto;
 	max-width: $content-max-width;
+
+	& > * {
+		display: inline-block;
+	}
 }
