--- a/content/styles/layouts/_content.scss
+++ b/content/styles/layouts/_content.scss
@@ -1,10 +1,11 @@
-$content-max-width: 50%;
-
 .l-content {
 	margin: 30px auto;
-	max-width: $content-max-width;
 
-	& > * {
-		display: inline-block;
+	@media screen and (min-width: 769px) {
+		width: 500px;
+	}
+
+	@media screen and (max-width: 768px) {
+		width: 80%;
 	}
 }
