--- a/content/styles/modules/_search.scss
+++ b/content/styles/modules/_search.scss
@@ -1,15 +1,34 @@
-$search-box-bg: #ebebeb;
-$search-box-focus-bg: darken($search-box-bg, 3%);
+$search-input-bg: #ebebeb;
+$search-input-focus-bg: darken($search-input-bg, 5%);
 
-.search__box {
-	background-color: $search-box-bg;
-	border: 0;
-	border-radius: 4px;
-	outline: 0;
-	padding: 0 15px;
-	transition: background-color .2s ease-out;
+.search {
+	display: flex;
+	height: 37px;
+	justify-content: space-between;
 
-	&:focus {
-		background-color: $search-box-focus-bg;
+	& > * {
+		height: 100%;
+	}
+
+	& > :not(:first-child) {
+		margin-left: 5px;
+	}
+
+	&__input {
+		background-color: $search-input-bg;
+		border: 0;
+		border-radius: 4px;
+		flex-grow: 3;
+		outline: 0;
+		padding: 0 15px;
+		transition: background-color .2s ease-out;
+
+		&:focus {
+			background-color: $search-input-focus-bg;
+		}
+	}
+
+	&__btn {
+		flex-grow: 1;
 	}
 }
