--- a/content/styles/layouts/_responsive.scss
+++ b/content/styles/layouts/_responsive.scss
@@ -36,7 +36,7 @@ body {
 
 .l-nav {
 	@media screen and (min-width: 769px) {
-		margin: 35px auto 25px;
+		margin: 30px auto;
 	}
 
 	@media screen and (max-width: 768px) {
