--- a/layouts/article.html
+++ b/layouts/article.html
@@ -8,8 +8,8 @@
 		<%= yield %>
 	</div>
 
-	<div class="l-contact contact-cta">
-		<span class="contact-cta__head">¿No has encontrado lo que buscabas?</span>
-		<a class="contact-cta__btn btn btn--primary" href="/contact">Contáctanos</a>
+	<div class="l-contact cta">
+		<span class="cta__head">¿No has encontrado lo que buscabas?</span>
+		<a class="cta__btn btn btn--primary" href="/contact">Contáctanos</a>
 	</div>
 <% end %>
