--- a/content/styles/layouts/_content.scss
+++ b/content/styles/layouts/_content.scss
@@ -1,11 +1,5 @@
 .l-content {
 	margin: 30px auto;
-
-	@media screen and (min-width: 769px) {
-		width: 500px;
-	}
-
-	@media screen and (max-width: 768px) {
-		width: 80%;
-	}
+	max-width: 500px;
+	width: 90%;
 }
