--- a/layouts/default.html
+++ b/layouts/default.html
@@ -24,12 +24,7 @@
 		<link rel="stylesheet" href="/styles/default.css">
 
 		<!-- Google Analytics tracking -->
-		<script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-			ga('create', 'UA-86942802-1', 'auto');
-			ga('require', 'linkid');
-			ga('send', 'pageview');
-		</script>
+		<%= ga_tracking_code %>
 	</head>
 
 	<body>
