--- a/layouts/default.html
+++ b/layouts/default.html
@@ -20,7 +20,7 @@
 		<!-- you don't need to keep this, but it's cool for stats! -->
 		<meta name="generator" content="Nanoc <%= Nanoc::VERSION %>">
 
-		<script src="scripts/index.js"></script>
+		<script src="/scripts/index.js"></script>
 		<link rel="stylesheet" href="/styles/default.css">
 
 		<!-- Google Analytics tracking -->
