Fix website metadata

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -7,7 +7,7 @@
 
 		<!-- Schema.org Structured Data for Google -->
 		<title itemprop="name">Centro de Ayuda de AVEM</title>
-		<link rel="canonical" ref="http://help.avem.es" itemprop="url">
+		<link rel="canonical" href="http://help.avem.es" itemprop="url">
 
 		<!-- OpenGraph metadata -->
 		<meta property="og:type" content="website">
