Integrate Google Custom Search

--- a/content/styles/default.scss
+++ b/content/styles/default.scss
@@ -20,4 +20,5 @@
 @import 'modules/header';
 @import 'modules/index';
 @import 'modules/navigation';
-@import 'modules/search';
+@import 'modules/search-box';
+@import 'modules/search-results';
