--- a/layouts/default.html
+++ b/layouts/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
-<html>
-	<head lang="es" itemscope itemtype="http://schema.org/WebSite">
+<html itemscope itemtype="http://schema.org/WebSite">
+	<head lang="es">
 		<meta charset="UTF-8">
 		<meta name="keywords" content="avem,uv,ayuda,dudas,faq,help,support">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
