--- a/layouts/default.html
+++ b/layouts/default.html
@@ -29,7 +29,7 @@
 
 	<body>
 		<div id="page-wrapper" class="l-body">
-			<header class="l-header header">
+			<header class="l-header header nocontent">
 				<button id="menu-toggle" class="header__hamburger btn btn--fixed">
 					<i class="fa fa-bars fa-lg"></i>
 				</button>
@@ -46,7 +46,7 @@
 				</div>
 			</header>
 
-			<nav id="main-nav" class="l-nav nav">
+			<nav id="main-nav" class="l-nav nav nocontent">
 				<a class="nav__link" href="http://avem.es">Inicio</a>
 				<a class="nav__link" href="http://avem.es/activities">Actividades</a>
 				<a class="nav__link" href="http://avem.es/exchanges">Intercambios</a>
@@ -58,7 +58,7 @@
 				<%= yield %>
 			</div>
 
-			<footer class="l-footer footer">
+			<footer class="l-footer footer nocontent">
 
 			</footer>
 		</div>
